hphp/test/zend/good/ext/date/tests/DateInterval_format_a.php.skipif
<?php 
<<__EntryPoint>> function main() { if (!method_exists('DateInterval', 'format')) die("skip: method doesn't exist"); 
}
