hphp/test/zend/bad/ext/date/tests/DateInterval_format.php.skipif
<?php if (!method_exists('DateInterval', 'format')) die("skip: method doesn't exist"); ?>